tests/compile_fail/message_trait/gui/info.rs
fn a(_: impl ruci::gui::traits::Message) {}
fn b(m: ruci::Info) {
    a(m);
}

fn main() {}